--- a/index.html
+++ b/index.html
@@ -4,11 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.com">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        hi
+        <img src="Images/Portfolio Website Logo.png" alt="logo">
+        <nav>
+            <a href="#about-me">About Me</a>
+            <a href="#graphic-design">Graphic Design</a>
+            <a href="#photography">Photogrpahy</a>
+            <a href="#contact-me">Contact Me</a>
+        </nav>
     </header>
+    <section id="about-me">
+        <h2>About Me</h2>
+        <p>Hi! I'm Nate and have a passion for creating beautiful artworks with both graphic design and photography. I started with nature photography, then got into taking picutres for people whether that was senior photos, engagement photos, headshots, or anything in between. Eventually I got introduced to graphic design and have gotten the opportunity to create some works that I never thought I would be able to. I can't wait to further develop my skills and create even more amazing work for others!</p>
+    </section>
+    <section>
+        <h2>School Info & Work Experience</h2>
+        <ul>
+            <li>UWEC Graphic Communicactions Major 2022-2025</li>
+            <li>Logo design for A+ Sports Cards and Memorabilia</li>
+            <li>Logo design for Here For The Beer bowling team</li>
+            <li>Wedding photoshoot</li>
+            <li>Graduation photoshoots</li>
+            <li>Artwork featured in the 2023 Fall Foundations exhibit in the Foster Art Gallery</li>
+            <li>Senior photoshoots</li>
+            <li>Engagement photoshoots</li>
+        </ul>
+    </section>
+    <section id="graphic-design">
+        <h2>Graphic Design</h2>
+        <img src="Images/Screenshot 2024-10-24 at 9.49.51 AM.png" alt="concert poster">
+        <img src="Images/A+ Cards Final Design.png" alt="card logo">
+        <img src="Images/Bowling Logo Final.png" alt="bowling logo">
+    </section>
+    <section id="photography">
+        <h2>Photogrpahy</h2>
+        <img src="Images/DSC01253.jpg" alt="lake">
+        <img src="Images/DSC02147.jpg" alt="clock">
+        <img src="Images/DSC03492.jpg" alt="ring">
+    </section>
+    <footer id="contact-me">
+        <h2>Contact Me</h2>
+        <p>Call/Text: 224-944-4783</p>
+        <p>Email: loschenm1472@uwec.edu</p>
+    </footer>
 </body>
 </html>
